--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Devel-Cover-Report-Coveralls
 
 {{$NEXT}}
     - support COVERALLS_FLAG_NAME, different COVERALLS_ENDPOINT
+    - support GitHub actions in more native way without special secret
 
 0.15 2020-04-29T02:21:23Z
     - support Azure-Pipeline (thanks jacquesg)
